--- a/script/.env.ejemplo
+++ b/script/.env.ejemplo
@@ -1,9 +1,16 @@
 WORDPRESS_DB_USER=
 WORDPRESS_DB_PASSWORD=
 WORDPRESS_DB_NAME=
-
 IP_CLIENTE_MYSQL=
+WORDPRESS_DB_HOST=
+
+WORDPRESS_TITLE=
+WORDPRESS_ADMIN_USER=
+WORDPRESS_ADMIN_PASSWORD=
+WORDPRESS_ADMIN_EMAIL=
 
 # Variables de Let´s Encript
 LE_EMAIL=
 LE_DOMAIN=
+
+WHP_PAGE=
